<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.xiaohe66</groupId>
    <artifactId>xiaohe66-commons</artifactId>
    <packaging>pom</packaging>
    <version>2.0.2</version>

    <properties>
        <mvnrepository.name>xiaohe66-mvnrepository</mvnrepository.name>

        <!-- 和 spring boot 2.5.3中的 okhttp版本一致 -->
        <okhttp.version>3.14.9</okhttp.version>

        <slf4j-api.version>2.0.0-alpha5</slf4j-api.version>
        <logback.version>1.3.0-alpha10</logback.version>

        <commons-lang3.version>3.12.0</commons-lang3.version>
        <jackson.version>2.12.3</jackson.version>
        <poi.version>5.0.0</poi.version>
        <lombok.version>1.18.22</lombok.version>
        <itext.version>5.5.13.2</itext.version>
    </properties>

    <build>
        <plugins>

            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <configuration>
                    <altDeploymentRepository>
                        internal.repo::default::file:${project.build.directory}/${mvnrepository.name}
                    </altDeploymentRepository>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.github.github</groupId>
                <artifactId>site-maven-plugin</artifactId>
                <configuration>
                    <!-- 提交信息 -->
                    <message>Maven artifacts for ${project.version}</message>
                    <noJekyll>true</noJekyll>
                    <!--本地jar相关文件地址，与上方配置储存库位置(altDeploymentRepository)保持一致-->
                    <outputDirectory>${project.build.directory}/${mvnrepository.name}</outputDirectory>
                    <!--配置上传到github哪个分支，此处配置格式必须以refs/heads/+分支名称-->
                    <branch>refs/heads/main</branch>
                    <merge>true</merge>
                    <includes>
                        <include>**/*</include>
                    </includes>
                    <!--对应github上创建的仓库名称 name-->
                    <repositoryName>${mvnrepository.name}</repositoryName>
                    <!--github 仓库所有者即登录用户名-->
                    <repositoryOwner>xiaohe66</repositoryOwner>
                    <server>github</server>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>site</goal>
                        </goals>
                        <phase>deploy</phase>
                    </execution>
                </executions>
            </plugin>

            <!-- 跳过测试 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <!-- 设置工程的jdk版本 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- 解决资源文件的编码问题 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

        </plugins>

    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub xiaohe66</name>
            <url>https://maven.pkg.github.com/xiaohe66/xiaohe66-mvnrepository</url>
        </repository>
    </distributionManagement>

    <modules>
        <module>xiaohe66-common-api</module>
        <module>xiaohe66-common-base</module>
        <module>xiaohe66-common-email</module>
        <module>xiaohe66-common-image</module>
        <module>xiaohe66-common-ppt</module>
        <module>xiaohe66-common-table</module>
    </modules>

    <dependencyManagement>

        <dependencies>

            <dependency>
                <groupId>com.xiaohe66</groupId>
                <artifactId>xiaohe66-common-base</artifactId>
                <version>1.0.2</version>
            </dependency>

            <dependency>
                <groupId>com.xiaohe66</groupId>
                <artifactId>xiaohe66-common-api</artifactId>
                <version>1.0.2</version>
            </dependency>

            <dependency>
                <groupId>com.xiaohe66</groupId>
                <artifactId>xiaohe66-common-email</artifactId>
                <version>1.0.0</version>
            </dependency>

            <!--<dependency>
                <groupId>com.xiaohe66</groupId>
                <artifactId>xiaohe66-common-image</artifactId>
                <version>1.0.0</version>
            </dependency>

            <dependency>
                <groupId>com.xiaohe66</groupId>
                <artifactId>xiaohe66-common-ppt</artifactId>
                <version>1.0.0</version>
            </dependency>

            <dependency>
                <groupId>com.xiaohe66</groupId>
                <artifactId>xiaohe66-common-table</artifactId>
                <version>1.0.0</version>
            </dependency>-->

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.6</version>
            </dependency>

            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.15</version>
            </dependency>

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>28.1-jre</version>
                <exclusions>
                    <exclusion>
                        <artifactId>jsr305</artifactId>
                        <groupId>com.google.code.findbugs</groupId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j-api.version}</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.8.6</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi</artifactId>
                <version>${poi.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>batik-all</artifactId>
                        <groupId>org.apache.xmlgraphics</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>xml-apis</artifactId>
                        <groupId>xml-apis</groupId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!--<dependency>
                <groupId>xerces</groupId>
                <artifactId>xercesImpl</artifactId>
                <version>2.12.0</version>
                <scope>provided</scope>
            </dependency>-->

            <dependency>
                <groupId>javax.mail</groupId>
                <artifactId>mail</artifactId>
                <version>1.5.0-b01</version>
            </dependency>

            <!--<dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>itextpdf</artifactId>
                <version>${itext.version}</version>
            </dependency>-->

            <dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>html2pdf</artifactId>
                <version>3.0.5</version>
                <scope>provided</scope>
            </dependency>


        </dependencies>
    </dependencyManagement>

</project>